# web-scrapper-notifier

./: .gitignore  README.md  pyproject.toml  scraper.py  snapshot.txt
.github/workflows/: scraper.yml
tests/: test_scraper.py
